--- a/vercel.json
+++ b/vercel.json
@@ -1,16 +1,17 @@
-{
-  "version": 2,
-  "builds": [
-    { "src": "src/**/*", "use": "@vercel/static" },
-    { "src": "styles/**/*", "use": "@vercel/static" },
-    { "src": "scripts/**/*", "use": "@vercel/static" },
-    { "src": "logo.png", "use": "@vercel/static" },
-    { "src": "index.html", "use": "@vercel/static" }
-  ],
-  "routes": [
-    { "src": "/", "dest": "/index.html" },
-    { "src": "/admin", "dest": "/src/AdminLogin.html" },
-    { "src": "/admin-panel", "dest": "/src/AdminPanel.html" },
-    { "src": "/(.*)", "dest": "/$1" }
-  ]
-}
+{ "version": 2,
+   "builds": [
+     { "src": "server/server.js", "use": "@vercel/node" },
+     { "src": "src/**/*", "use": "@vercel/static" },
+     { "src": "styles/**/*", "use": "@vercel/static" },
+ 
+     { "src": "scripts/**/*", "use": "@vercel/static" },
+     { "src": "logo.png", "use": "@vercel/static" }
+   ],
+   "routes": [
+     { "src": "/api/(.*)", "dest": "/server/server.js" },
+     { "src": "/", "dest": "/src/DisplayTimetable.html" },
+     { "src": "/admin", "dest": "/src/AdminLogin.html" },
+     { "src": "/admin-panel", "dest": "/src/AdminPanel.html" },
+     { "src": "/(.*)", "dest": "/src/$1" }
+   ]
+ }
