--- a/package.json
+++ b/package.json
@@ -6,5 +6,10 @@
   "scripts": {
     "start": "echo 'Open index.html in a browser to run the application'"
   },
-  "dependencies": {}
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "dependencies": {
+    "express": "^5.1.0"
+  }
 }
